# python-face-recognition

./: .gitignore  LICENSE  README.md  face_matcher.py  main.py  pyproject.toml  webcam.py  webcam__test.py
classes/: face_analyser.py  webcam.py
faces/: .gitignore
utilities/: face_utility.py  logging_utility.py  path_utility.py  webcam_utility.py
